<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/datawarning" />

    <EditText
        android:id="@+id/etSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSource"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/entersource"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSource"
        android:layout_below="@+id/tvWarning"
        android:text="@string/source"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnCorrelate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTarget"
        android:layout_centerHorizontal="true"
        android:text="@string/correlate" />

    <TextView
        android:id="@+id/tvTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSource"
        android:layout_below="@+id/etSource"
        android:text="@string/target"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTarget"
        android:layout_below="@+id/tvTarget"
        android:ems="10"
        android:hint="@string/entertarget"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvWarning"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvWarning"
        android:layout_below="@+id/btnCorrelate"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>